# gamblor-app

./: docker-compose.yml
backend/: AUTHENTICATION.md  Dockerfile  SEEDING.md  alembic.ini  auth.py  db.py  main.py  models.py  pyproject.toml  run_seed.py  seed.py
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 594559cf1cd3_merge_heads.py  6f01e351fb59_fix_issues.py  77d10d96597c_add_users.py  7f1fa72657ab_add_user_google_oauth.py  99a223b99e88_add_characters_to_game_players.py  a3c2e5956a12_add_most_tables.py  c98963c32f7c_add_lifetime_tables.py  fix_ledger_entries_inning_id.py
backend/routers/: games.py  oauth.py  users.py
frontend/: package.json  pnpm-lock.yaml
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/api/users/: route.ts
frontend/src/app/games/: page.tsx
frontend/src/app/games/[id]/: page.tsx
frontend/src/app/lib/: backend.ts
frontend/src/app/login/: page.tsx
frontend/src/app/users/: page.tsx
frontend/src/components/: GoogleLoginButton.tsx  Navigation.tsx  theme-toggle.tsx
frontend/src/components/games/: CharacterSelection.tsx  GameCreation.tsx  GameCreationForm.tsx  GameJoining.tsx  GameLobby.tsx  GamePlay.tsx  GameSettings.tsx
frontend/src/components/ui/: form.tsx  loading.tsx  popup.tsx  toast-provider.tsx  toast.tsx  use-toast.ts
frontend/src/lib/: auth.tsx
frontend/src/lib/api/: games.ts
frontend/src/lib/types/: api.d.ts
